# calc-rs

./: Cargo.toml
src/: calculus.rs  lib.rs  stat.rs
tests/: lib.rs
