[package]

name = "calc"
version = "0.0.1"
authors = ["philhofer <phofer@umich.edu>"]

keywords = ["math", "numerics", "numerical methods", "statistics"]
license = "MIT"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false